--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,22 @@ termize = "0.1"
 color-print = "0.3.4"
 anstream = "0.5.0"
 
+[dependencies.rustc_interface]
+path = "/home/francis/CLionProjects/rust/compiler/rustc_interface"
+optional = true
+
+[dependencies.rustc_driver]
+path = "/home/francis/CLionProjects/rust/compiler/rustc_driver"
+optional = true
+
+[dependencies.rustc_span]
+path = "/home/francis/CLionProjects/rust/compiler/rustc_span"
+optional = true
+
+[dependencies.rustc_session]
+path = "/home/francis/CLionProjects/rust/compiler/rustc_session"
+optional = true
+
 [dev-dependencies]
 ui_test = "0.21.2"
 tester = "0.9"
@@ -62,6 +78,7 @@ rustc_tools_util = "0.3.0"
 deny-warnings = ["clippy_lints/deny-warnings"]
 integration = ["tempfile"]
 internal = ["clippy_lints/internal", "tempfile"]
+intellij = ["rustc_interface", "rustc_driver", "rustc_span", "rustc_session", "clippy_lints/intellij"]
 
 [package.metadata.rust-analyzer]
 # This package uses #[feature(rustc_private)]
