--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,16 +29,16 @@ termize = "0.1"
 color-print = "0.3.4"
 anstream = "0.5.0"
 
+[dependencies.rustc_interface]
+path = "/home/francis/CLionProjects/rust/compiler/rustc_interface"
+optional = true
+
 [dependencies.rustc_session]
 path = "/home/francis/CLionProjects/rust/compiler/rustc_session"
 optional = true
 
 [dependencies.rustc_driver]
 path = "/home/francis/CLionProjects/rust/compiler/rustc_driver"
-optional = true
-
-[dependencies.rustc_interface]
-path = "/home/francis/CLionProjects/rust/compiler/rustc_interface"
 optional = true
 
 [dependencies.rustc_span]
@@ -72,7 +72,7 @@ rustc_tools_util = "0.3.0"
 deny-warnings = ["clippy_lints/deny-warnings"]
 integration = ["tempfile"]
 internal = ["clippy_lints/internal", "tempfile"]
-intellij = ["rustc_session", "rustc_driver", "rustc_interface", "rustc_span", "clippy_lints/intellij"]
+intellij = ["rustc_interface", "rustc_session", "rustc_driver", "rustc_span", "clippy_lints/intellij"]
 
 [package.metadata.rust-analyzer]
 # This package uses #[feature(rustc_private)]
